--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
       </div>
     </div>
     <div class="div6">
-      <div class="div61 div60"><p>1THE BEST PLACE FOR BEST CARRER</p></div>
+      <div class="div61 div60"><p>THE BEST PLACE FOR BEST CARRER</p></div>
       <div class="div62 div60">
-        <p>2YOU CAN ASK DOUBT IN OUR DOUBT SECTION.</p>
+        <p>YOU CAN ASK DOUBT IN OUR DOUBT SECTION.</p>
       </div>
       <div class="div63 div60">
-        <p>3 Get 30% Off by applying code while purchasing course</p>
+        <p>Get 30% Off by applying code while purchasing course</p>
       </div>
       <div class="div64 div60">
         <p>
-          4 We assure that your hard work & our teaching wil give bright result
+          We assure that your hard work & our teaching wil give bright result
         </p>
       </div>
       <div class="div66 div60">
@@ -94,13 +94,13 @@
       </div>
       <div class="div65 div60">
         <p>
-          6 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
           quod eligendi eveniet est tempore expedita aut laudantium eum
           possimus! Quo laboriosam possimus velit est deserunt, neque aliquid
           rerum officiis excepturi!
         </p>
       </div>
-      <div class="div67 div60"><p>7 ALL THE BEST</p></div>
+      <div class="div67 div60"><p>ALL THE BEST!</p></div>
     </div>
   </body>
 </html>
